# trow

./: .dockerignore  .env  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .typos.toml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  DEV_NOTES.md  Dockerfile  Dockerfile.debug  Dockerfile.debug.arm64  Dockerfile.multi  Dockerfile.release  Dockerfile.release.arm64  Dockerfile.single  Dockerfile.test  INSTALL.md  Lycaon.toml  MANUAL_INSTALL.md  Makefile  QUICK-INSTALL.md  README.md  Rocket.toml  Trow.toml  authentication.org  authentication.txt  build.rs  default.nix  devshell.toml  font.css  index.html  index.yaml  install.sh  (+10 more)
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.sqlx/: query-0267ad1f011779abdd531fe5a332b7b636fb017c5e935b462a00d89e12ea4fd7.json  query-04380a0bd91d3405cfd45eff6b6f2b33b001f0c5e8c3065674ddf046a51bccee.json  query-0be73f5f867ae4ec655854a33aceb202ddf91c2eeff83c630672154f309ba1a9.json  query-0d94fec6d4492cf2c8e1be688a6e31d1d3389809b63ee2b7636fa345dea58138.json  query-11ef1d69ef684e5a1f1207bea26e541640bee4cbe6785441cb86aa25141ddb9a.json  query-138ef3ce3b5a667e567a77fbf6f7f5002bd8290e5e369231b358883b55551ee0.json  query-145b8d36bfdffcc8ee8891ce09c85e66ff63ff613ef2bfb729f29c6cf43bad80.json  query-16ad8411febff0e01175536aa208bcbaa8e2e17a2762a21e59e9539fc13e18b5.json  query-204cfed437bcfb93fa1ec76691863e3ddfdb823b75f84421fa83bdc9ec3af36b.json  query-29b5c4e4dddedb3e58a7645478247765c405d3aae2561e44807f8ea7ac4594b2.json  query-2f77dc09de38896eb393ae58962a82764afadd3e432e7f79f4cd1b41010947e1.json  query-38275e6a8bc246702e74bd27deee17d41f0be846b5dee0b4d4b1c215afe89c80.json  query-40620d77dbcd8a1543cdaefb7ef02dd372e2c18e8a2bf774a9f4d133f4b3b751.json  query-41e6d71c5d880ee57be3dbd8a325d6603202a6be266d0cd8262d1a575b2dfdfb.json  query-459995dfcba9b3dc20c52e1709534bc260c313951fda246dfee7fdb64be31429.json  query-45b19d4ac366152e9c40faac1c70aea2c67a2b2ea7cd01c9f02e673c1359ff0c.json  query-49d1cdd16a91e9f9a9430e28f6a65e1b0e5cf4e0073e0f075f53923dac600b5e.json  query-543f97b8ae469f72838422c877cfa5a30dd9efa829b4b772e8d17cc63e79c5e0.json  query-552852975d7cbaf61439d8ad1b2004d8e34ff55915ebd7f418986c68792fbb91.json  query-552b6e909686612b52bc7e9b59988869d5fbf29fca8f95b687d53057d2521fb3.json  query-55d64bf5f59ec01665dca8085508bba9da187968d0b03a93483534b47b7ed33b.json  query-5a36e42b19f50cc9caf51904a4e31fe7364c837408a53be125772a6069d5f80b.json  query-5b1fee3de30caf6ee09051e5687225954ed8c324d68b4d7770ea562efad6cbfa.json  query-5b2946fbbd9c1f20e7f3e1e531b9036960dbec8eab7f419c3a27ef4ca58b7382.json  query-5bb70620119975a252a633eb161af3d32825f090da7ab633433503f0f1f087f5.json  query-614b5d0c6ad0e1bcef68abe4d49aada513bbd702d6074ce266eb24c5d06f427d.json  query-6337671296f0e2b7e81c90bc056f03312f31f48f3870baba66f708e19053b44b.json  query-633fd7b7bbf72cbc6c56c3e4c7b8d31146cf0abded7a4b561d3a0b47afc293c5.json  query-637f10b13ddf613bc9149ca8c3b8359a7d1a98421091517a68b748af91b49859.json  query-64ff141cd6bfaaca29cfebfe70dd061723e8925b31e6e0d2a6dbc904aa970d7a.json  query-658aba4198e53bf6c9b08f347667ec58b13b2eae9382b319233e502924fbcde4.json  query-666ee67eace7ba2e0a858716c3bd364cd1f15a15bb79652b75c252bd76fe2d79.json  query-6a3b3dd4b9aacf35b47cc6441605b16a5a24b6e314c68596d4ba52101d3efddb.json  query-6b38b4b366949977849943b70cefbc5b281e25417136bb72f15a5676dc7736ed.json  query-70c6f6aa2d8311ad45ddd5cf4961d6d4b89f7e743809dec6bc4319a28bcfd651.json  query-7142a28d2a0311ceb92ffa147faaa601e0810b77e681ca2cc59b88515ffa4c51.json  query-724b2e99284ee815406958f59ee43b345b036d9d92da2f64fed1f213ca4ef261.json  query-73f776d594587729d3006faac67ef1bf89a156db45e7f5081ba971683cfc4e60.json  query-740b87cdacd4d66477e2887ceccba3d796cf3fba15296c4ee1c3b4a06950f8ea.json  query-747da150f0274908e1f2b5289463eae7e504e07d4c79491b8ccf3feaa7030002.json  (+58 more)
capnp/: index.capnp
certs/: in.req  make-certs.sh
chart/: Chart.yaml  values.yaml
charts/: index.yaml
ci-config/: install-kind-ingress.sh  kind.yaml  values.yaml
conformance/: run-conformance.sh
dev/: Justfile  registries.yaml
docker/: Dockerfile  Dockerfile.arm64  Dockerfile.armv7  Dockerfile.debug  Dockerfile.debug.arm64  Dockerfile.multi  Dockerfile.notls  Dockerfile.release  Dockerfile.test  Dockerfile.trivy  README.md  build.sh  docker-test.sh  manifest.tmpl  multi-arch.sh  platform.sh  release-manifest.tmpl  release.sh  test.sh
docs/: ARCHITECTURE.md  COMPARISON.md  HELM_INSTALL.md  KUSTOMIZE_INSTALL.md  MANUAL_INSTALL.md  USER_GUIDE.md  values.yaml
gui/: .babelrc  .babelrc.json  .eslintrc.json  .gitignore  Cargo.toml  Design.md  Dockerfile  README.md  Trunk.toml  config.js  config.json  config.ts  index.html  package.json  (+4 more)
gui-wasm/: .gitignore  Cargo.toml  Dockerfile  README.md  app.js  index.js  package.json  proxy.js  webpack.common.js  webpack.dev.js
gui-wasm/proxy/: Cargo.toml  README.md
gui-wasm/proxy/src/: main.rs
gui-wasm/src/: app.rs  error.rs  lib.rs  switch.rs
gui-wasm/src/components/: catalog.rs  home.rs  login.rs  mod.rs  nav.rs  reference_details.rs  repository.rs  settings.rs
gui-wasm/src/services/: api.rs  auth.rs  blob.rs  manifest.rs  mod.rs  repositories.rs  tags.rs
gui-wasm/src/types/: blob.rs  manifest.rs  mod.rs
gui-wasm/style/: app.scss
gui-wasm/tests/: web.rs
lib/backend/: Cargo.toml
lib/backend/src/: backend.rs  client_interface.rs  config.rs  lib.rs  peer.rs  util.rs
lib/protobuf/: Cargo.toml  Makefile  README.md  build.rs  default.nix
lib/protobuf/src/: backend.proto  backend.rs  backend_grpc.rs  lib.rs  peer.proto  peer.rs  peer_grpc.rs  server.proto  server.rs  server_grpc.rs
lib/server/: Cargo.toml
lib/server/src/: digest.rs  lib.rs  manifest.rs  metrics.rs  server.rs  statics.rs  temporary_file.rs  validate.rs
lib/tonic-server/: Cargo.toml
lib/tonic-server/src/: lib.rs  manifest.rs  server.rs
trow-protobuf/: Cargo.toml
trow-protobuf/src/: server.proto
trow-server/: Cargo.toml
trow-server/src/: admission.rs  digest.rs  image.rs  lib.rs  manifest.rs  metrics.rs  proxy_auth.rs  server.rs  temporary_file.rs  validate.rs
(+446 files in other folders)
