[package]
name = "trow"
version = "0.9.1"
authors = []
edition = "2024"

[features]
sqlite = []

[dependencies]
futures = "0.3"
axum = { version = "0.8.1", features = ["tracing"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "cors",
    "normalize-path",
    "trace",
    "set-header",
] }
jsonwebtoken = "9.2"
rust-argon2 = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml_ng = "0.10.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
base64 = "0.22.1"
derive_more = { version = "2.0", features = ["display"] }
clap = { version = "4.1.0", features = ["derive"] }
bytes = "1"
chrono = { version = "^0.4", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.5.0"
sha2 = "0.10.0"
hex = "0.4.0"
thiserror = "2.0"
kube = { version = "1.1.0", features = ["admission"] }
k8s-openapi = { version = "0.25.0", features = ["v1_30"] }
json-patch = "4"
jsonptr = "*"
tokio = { version = "1", features = ["macros"] }
tokio-util = { version = "0.7.8", features = ["codec", "compat"] }
hyper = "1.6"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.37"
paste = "1.0.14"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
aws-config = "1.5.0"
aws-types = "1.3.0"
aws-sdk-ecr = "1.5.0"
const_format = "0.2.24"
humansize = "2.1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "migrate",
    "sqlite",
    "json",
] }
oci-spec = "0.8.0"
oci-client = { version = "0.15.0", default-features = false, features = [
    "rustls-tls",
] }
rustls = "0.23"
size = { version = "0.5.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
environment = "^0.1"
libc = "0.2"
wiremock = "0.6.0"
fastrand = "2.0.1"
http-body-util = "0.1.1"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
test-temp-dir = "0.3.0"
rstest = "0.26.0"

[profile.dev.build-override]
opt-level = 3
