[package]
name = "gui"
version = "0.1.0"
authors = ["Eric Caleb <eric.caleb@container-solutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = "0.14.0"
yewtil = "0.3.2"
wasm-bindgen = "0.2.70"
serde = "1.0.123"
serde_json = "1.0"
log = "0.4.6"
wasm-logger = "0.2.0"
anyhow = "1.0"
thiserror = "1.0"