[package]
name = "trow-protobuf"
version = "0.5.0"
edition = "2021"

authors = ["Adrian Mouat <adrian.mouat@container-solutions.com", "Hamish Hutchings <hamish.hutchings@container-solutions.com>"]
build = "build.rs"

[dependencies]
futures = "0.3"
async-stream = "0.3"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11.9"
prost-types = "0.11.9"
rand = "0.8"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["codegen"] }

[build-dependencies]
tonic-build = "0.9.2"
