[package]
name = "trow-server"
version = "0.5.0"
edition = "2021"

authors = ["Adrian Mouat <adrian.mouat@container-solutions.com" ]

[dependencies]
async-recursion = "1.0"
futures = "0.3"
async-stream = "0.3"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread", "fs"] }
tokio-stream = "0.1"
chrono = "0.4"
tonic = "0.9"
log = "0.4"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
serde_derive = "^1.0"
trow-protobuf = { path = "../trow-protobuf" }
rustc-serialize = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
prometheus = { version = "0.13"}
lazy_static = "1.4.0"
fs3 = "0.5.0"
sha2 = "0.10"
hex = "0.4"
quoted-string = "0.6.1"
regex = "1.5.0"
rusoto_core = "0.48"
rusoto_ecr = "0.48"
base64 = "0.21.0"
const_format = "0.2.24"
json-patch = "1.0.0"

[build-dependencies]
tonic-build = "0.9.2"

[dev-dependencies]
tempfile = "3.3"
httpmock = "0.6"
