[package]
name = "trow-backend"
version = "0.1.0"
authors = ["Adrian Mouat <adrian.mouat@container-solutions.com>", "Hamish Hutchings <hamish.hutchings@container-solutions.com>"]

[dependencies]
futures = "^0.1"
failure = { git = 'https://github.com/withoutboats/failure', rev = "ae276f58615174e5b2dbba8dd7c6e47a033c7e2c"}
grpcio = "=0.2.3"
protobuf = "=1.4.5"

log = "^0.3"

serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
uuid = { version = "^0.5", features = ["v4", "rustc-serialize"] }

# Private
trow-protobuf = { path = "../protobuf" }
