[package]
name = "trow-protobuf"
version = "0.1.0"
edition = "2018"

authors = ["Adrian Mouat <adrian.mouat@container-solutions.com", "Hamish Hutchings <hamish.hutchings@container-solutions.com>"]
build = "build.rs"

[dependencies]
async-stream = "0.2"
bytes = "0.4"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.5"
rand = "0.7.2"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
tonic = "0.1.0-beta.1"

[build-dependencies]
tonic-build = "0.1.0-beta.1"
