[package]
name = "trow-protobuf"
version = "0.3.3"
edition = "2018"

authors = ["Adrian Mouat <adrian.mouat@container-solutions.com", "Hamish Hutchings <hamish.hutchings@container-solutions.com>"]
build = "build.rs"

[dependencies]
futures = "0.3"
async-stream = "0.3"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.6"
prost-types = "0.6"
rand = "0.7.2"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
tonic = { version = "0.3", features = ["codegen"] }

[build-dependencies]
tonic-build = "0.3"
