[package]
name = "tonic-server"
version = "0.1.0"
edition = "2018"

authors = ["Adrian Mouat <adrian.mouat@container-solutions.com" ]

[dependencies]
async-stream = "0.1.2"
bytes = "0.4"
futures-preview = { version = "0.3.0-alpha.19", default-features = false, features = ["alloc"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.5"
rand = "0.7.2"
tokio = "0.2.0-alpha.6"
tonic = "0.1.0-alpha.5"

[build-dependencies]
tonic-build = "0.1.0-alpha.5"
